# Modelica_DeviceDrivers

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CITATION.cff  LICENSE  README.md  ReleaseNotesPreviousVersions.md  UsersGuide.mo  build.drone.io.txt  git-archive-all.sh  libraryinfo.mos  package.mo  package.order
Modelica_DeviceDrivers 1.1/Resources/test/OperatingSystem/: CMakeLists.txt
Modelica_DeviceDrivers 1.1/Resources/test/SocketCAN/: CMakeLists.txt  test_MDDSocketCAN.c
Modelica_DeviceDrivers 1.1/Resources/test/Util/: CMakeLists.txt  ModelicaUtilities.c  test_MDDMapIntInt.c  test_MDDMapIntpVoid.c
Modelica_DeviceDrivers/Resources/: CMakeLists.txt  CTestCustom.cmake  Doxyfile  License.txt  README.md  Readme.txt
Modelica_DeviceDrivers/Resources/Include/: MDDAVRAnalog.h  MDDAVRDigital.h  MDDAVRHD44780.h  MDDAVRRealTime.h  MDDAVRSerial.h  MDDAVRSerialStdio.h  MDDAVRTimer.h  MDDBeep.h  MDDCANMessage.h  MDDComedi.h  MDDIIO.h  MDDJoystick.h  MDDKeyboard.h  MDDLCM.h  MDDMQTT.h  MDDMinimalSerialPackager.h  MDDOperatingSystem.h  MDDRealtimeSynchronize.h  MDDSTM32F4Analog.h  MDDSTM32F4Digital.h  MDDSTM32F4HAL.h  MDDSTM32F4RealTime.h  MDDSTM32F4Timer.h  MDDSerialPackager.h  MDDSerialPort.h  MDDSharedMemory.h  MDDSocketCAN.h  MDDSoftingCAN.h  MDDSpaceMouse.h  MDDTCPIPSocket.h  MDDTCPIPSocketServer.h  MDDUDPSocket.h  MDDUtilities.h  MDDUtilitiesMAC.h  MDDUtilitiesUUID.h  ModelicaUtilities.h  Readme.txt
Modelica_DeviceDrivers/Resources/Licenses/: LICENSE_Boost_detail_endian.txt  LICENSE_STM.txt  LICENSE_uthash.txt
Modelica_DeviceDrivers/Resources/doc/Modelica2017/: build.sh  caption3.sty  cleveref.sty  dtsyntax.sty  modelica2017_Modelica_DeviceDrivers.bib  modelica2017_Modelica_DeviceDrivers.tex  subcaption.sty
Modelica_DeviceDrivers/Resources/src/DummyCryptoLibrary/: CMakeLists.txt  MDDDummyCryptoLibrary.c  Readme.txt
Modelica_DeviceDrivers/Resources/src/DummyIPHlpApiLibrary/: CMakeLists.txt  MDDDummyIPHlpApiLibrary.c
Modelica_DeviceDrivers/Resources/src/DummyLibraries/: CMakeLists.txt  MDDDummyLibrary.c  README.md
Modelica_DeviceDrivers/Resources/src/DummyPthreadLibrary/: CMakeLists.txt  MDDDummyPthreadLibrary.c
Modelica_DeviceDrivers/Resources/src/DummyRTLibrary/: CMakeLists.txt  MDDDummyRTLibrary.c
Modelica_DeviceDrivers/Resources/src/DummyRpcrt4Library/: CMakeLists.txt  MDDDummyRpcrt4Library.c  Readme.txt
Modelica_DeviceDrivers/Resources/src/DummySSLLibrary/: CMakeLists.txt  MDDDummySSLLibrary.c  Readme.txt
Modelica_DeviceDrivers/Resources/src/DummyUUIDLibrary/: CMakeLists.txt  MDDDummyUUIDLibrary.c  Readme.txt
Modelica_DeviceDrivers/Resources/src/DummyUser32Library/: CMakeLists.txt
Modelica_DeviceDrivers/Resources/src/DummyWinmm/: MDDDummyWinmmLibrary.c
Modelica_DeviceDrivers/Resources/src/DummyWinmmLibrary/: CMakeLists.txt  MDDDummyWinmmLibrary.c
Modelica_DeviceDrivers/Resources/src/DummyWs2_32Library/: CMakeLists.txt  MDDDummyWs2_32Library.c
Modelica_DeviceDrivers/Resources/src/DummyX11Library/: CMakeLists.txt  MDDDummyX11Library.c  Readme.txt
Modelica_DeviceDrivers/Resources/src/ITI_ModelicaDeviceDrivers/: CMakeLists.txt  MDDLCMWrapper.c  MDDMQTTWrapper.c  MDDSoftingCANWrapper.c  MDDWrapper.c  Readme.txt
Modelica_DeviceDrivers/Resources/src/SpaceMouse/: CMakeLists.txt  MDDSpaceMouse.c  Readme.txt
Modelica_DeviceDrivers/Resources/src/Util/: CMakeLists.txt  MDDLoggingNotReady.c  MDDMapIntInt.c  MDDMapIntInt.cpp  MDDMapIntpVoid.c  MDDMapIntpVoid.cpp
Modelica_DeviceDrivers/Resources/src/include/: CompatibilityDefs.h  MDDMapIntInt.h  MDDMapIntpVoid.h  util.h
Modelica_DeviceDrivers/Resources/test/: CMakeLists.txt  Readme.txt
Modelica_DeviceDrivers/Resources/test/Communication/: CMakeLists.txt  TCPIPClientAsRemoteStation.c  test_EndiannessConversion.c  test_MDDLCM.c  test_MDDMQTT.c  test_MDDMQTT_buildAsSharedLibrary.c  test_MDDSerialPackager.c  test_MDDSerialPort.c  test_MDDSharedMemory.c  test_MDDTCPIPSocketClient.c  test_MDDTCPIPSocketServer.c  test_MDDUDPSocket.c  test_TCPIPSocketServerEcho.c  test_TCPIPSocketServerEcho.cpp
Modelica_DeviceDrivers/Resources/test/HardwareIO/: CMakeLists.txt  test_MDDComedi.c
Modelica_DeviceDrivers/Resources/test/InputDevices/: CMakeLists.txt  test_MDDJoystick.c  (+2 more)
Resources/: CMakeLists.txt  Doxyfile  Licence.txt  License.txt  Readme.txt
Resources/Include/: MDDBeep.h  MDDCANMessage.h  MDDComedi.h  MDDJoystick.h  MDDKeyboard.h  MDDMinimalSerialPackager.h  MDDOperatingSystem.h  MDDRealtimeSynchronize.h  MDDSerialPackager.h  MDDSerialPort.h  MDDSharedMemory.h  MDDSocketCAN.h  MDDSoftingCAN.h  MDDSpaceMouse.h  MDDUDPSocket.h  MDDUtilities.h
Resources/src/DummyRTLibrary/: CMakeLists.txt  MDDDummyRTLibrary.c  Readme.txt
Resources/src/DummyX11Library/: MDDDummyX11Library.c  Readme.txt
Resources/src/ITI_ModelicaDeviceDrivers/: CMakeLists.txt  MDDSoftingCANWrapper.c  MDDWrapper.c
Resources/src/SpaceMouse/: CMakeLists.txt  MDDSpaceMouse.c  Readme.txt
Resources/src/Util/: CMakeLists.txt  MDDLoggingNotReady.c  MDDMapIntInt.cpp  MDDMapIntpVoid.cpp  MDDObjectDict.cpp
Resources/src/WrapperLibrary/: CMakeLists.txt  MDDWrapper.c  Readme.txt
Resources/src/include/: CompatibilityDefs.h  MDDObjectDict.h  Readme.txt  util.h
Resources/test/: Readme.txt
Resources/test/Communication/: CMakeLists.txt  test_EndiannessConversion.c  test_MDDSerialPackager.c  test_MDDSharedMemory.c  test_MDDUDPSocket.c
Resources/test/HardwareIO/: CMakeLists.txt  test_MDDComedi.c
Resources/test/InputDevices/: CMakeLists.txt  test_MDDJoystick.c  test_MDDKeyboard.c  test_MDDSpaceMouse.c
Resources/test/OperatingSystem/: CMakeLists.txt  test_MDDRealtimeSynchronize_high.c  test_MDDRealtimeSynchronize_idle.c  test_MDDRealtimeSynchronize_low.c  test_MDDRealtimeSynchronize_normal.c  test_MDDRealtimeSynchronize_realtime.c  test_MDD_getTimeMS.c
Resources/test/SocketCAN/: CMakeLists.txt  test_MDDSocketCAN.c
Resources/test/SoftingCAN/: CMakeLists.txt  test_MDDCANMessage.c  test_MDDSoftingCAN.c
Resources/test/Util/: ModelicaUtilities.c  Readme.txt  test_MDDMapIntInt.c  test_MDDMapIntpVoid.c  test_MDDUtilities.c
(+799 files in other folders)
